# Disky

./: .gitignore  CLAUDE.md  config.json  disk_analyzer.py  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.js
.claude/: settings.local.json
disky-skill/: disky-skill.md
legacy/: _parse_tmp.py  disk_analyzer.py  disk_analyzer_original.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  cleanup.rs  context_menu.rs  history.rs  mod.rs  notes.rs  scan.rs  tags.rs
src-tauri/src/scanner/: mod.rs  walk.rs
src/components/: AiSettingsDialog.tsx  AnalyzeConfirmDialog.tsx  ChatPanel.tsx  CleanupDialog.tsx  ContextMenu.tsx  DirectoryTree.tsx  Header.tsx  HistoryDialog.tsx  SizeBar.tsx  SplitPane.tsx  StarRating.tsx  StatusBar.tsx  TagBoard.tsx  TagPicker.tsx  TreeMap.tsx
src/hooks/: useAiAnalysis.ts  useChat.ts  useScanSession.ts  useTags.ts
src/lib/: format.ts  invoke.ts
src/types/: index.ts
