[package]
name = "disky"
version = "0.1.0"
edition = "2021"

[lib]
name = "disky_lib"
crate-type = ["rlib"]

[[bin]]
name = "disky"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
trash = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
bincode = "1"
sysinfo = "0.30"
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
futures = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
